--- a/themes/desserts/layout/_partial/categories-post-gn.ejs
+++ b/themes/desserts/layout/_partial/categories-post-gn.ejs
@@ -6,16 +6,16 @@
         <ul class="categories">
           <li class="category ct-1"><a href="#">categoria 1</a></li>
           <li class="category ct-2"><a href="#">categoria 2</a></li>
-        </ul> 
+        </ul>
 
       </div>
 
       <div class="col-md-12 padding-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>                 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
 
       <div class="col-md-12 padding-0">
-        <a class="mas-info" href="#">ver más</a>
+        <a class="mas-info" href="post:title">ver más</a>
       </div>
 
     </div>
