--- a/themes/desserts/layout/index.ejs
+++ b/themes/desserts/layout/index.ejs
@@ -1,2 +1,21 @@
 <span>Content</span>
-
+<ul>
+  <% page.posts.each(function(post){ %>
+    <li>
+      <h3>
+        <a href="<%- url_for(post.path) %>" class="link-post">
+          <%= post.title %>
+        </a>
+      </h3>
+      <div class='text-muted'>
+        <%= date(post.date, config.date_format) %>
+      </div>
+      <% if(post.excerpt) { %>
+        <p>
+          <%- post.excerpt %>
+        </p>
+        <% } %>
+        <h6>By <%= config.author %></h6>
+      </li>
+      <% }) %>
+</ul>   
