--- a/themes/desserts/layout/test.html
+++ b/themes/desserts/layout/test.html
@@ -1,41 +1,65 @@
-<div class="grid-item grid-item--width4">
-            <div class="main-post">
-              <%- partial('_partial/post-generic-main') %>
-            </div>
-          </div>
-          
-          <div class="grid-item grid-item--width2">
-            <%- partial('_partial/post-generic-middle') %>
-          </div>
-          
-          <div class="grid-item grid-item--width3">
-            <div class="video">
-             <%- partial('_partial/post-generic-video') %> 
-            </div>
-          </div>
 
-          <div class="grid-item grid-item--width1">
-            <%- partial('_partial/post-generic-small') %>
-          </div>
 
-          <div class="grid-item grid-item--width1">
-            <div class="resaltado">
-              <%- partial('_partial/post-generic-small-highlighted') %>
-            </div>
-          </div>
 
-          <div class="grid-item grid-item--width1">
-            <div class="editorial">
-              <%- partial('_partial/post-generic-small-editorial') %>
-            </div>
-          </div>
+          <ul>
+            <% page.posts.each(function(post){ %>
+              <li>
+                <h3>
+                  <a href="<%- url_for(post.path) %>">
+                    <%= post.title %>
+                  </a>
+                </h3>
+                <div class='text-muted'>
+                  <%= date(post.date, config.date_format) %>
+                </div>
 
-          <div class="grid-item grid-item--width3">
-            <div class="video">
-             <%- partial('_partial/post-generic-video-2') %> 
-            </div>
-          </div>
+                <% if(post.excerpt) { %>
+                  <p>
+                    <%- post.excerpt %>
+                  </p>
+                  <% } %>
+                </li>
+                <% }) %>
+              </ul>
 
-          <div class="grid-item grid-item--width2">
-            <%- partial('_partial/post-generic-middle-2') %>
-          </div>
+              <div class="grid-item grid-item--width4">
+                          <div class="main-post">
+                            <%- partial('_partial/post-generic-main') %>
+                          </div>
+                        </div>
+
+                        <div class="grid-item grid-item--width2">
+                          <%- partial('_partial/post-generic-middle') %>
+                        </div>
+
+                        <div class="grid-item grid-item--width3">
+                          <div class="video">
+                           <%- partial('_partial/post-generic-video') %>
+                          </div>
+                        </div>
+
+                        <div class="grid-item grid-item--width1">
+                          <%- partial('_partial/post-generic-small') %>
+                        </div>
+
+                        <div class="grid-item grid-item--width1">
+                          <div class="resaltado">
+                            <%- partial('_partial/post-generic-small-highlighted') %>
+                          </div>
+                        </div>
+
+                        <div class="grid-item grid-item--width1">
+                          <div class="editorial">
+                            <%- partial('_partial/post-generic-small-editorial') %>
+                          </div>
+                        </div>
+
+                        <div class="grid-item grid-item--width3">
+                          <div class="video">
+                           <%- partial('_partial/post-generic-video-2') %>
+                          </div>
+                        </div>
+
+                        <div class="grid-item grid-item--width2">
+                          <%- partial('_partial/post-generic-middle-2') %>
+                        </div>
