--- a/themes/desserts/layout/layout.ejs
+++ b/themes/desserts/layout/layout.ejs
@@ -10,8 +10,18 @@
 
     <div class="right">
       <%- partial('_partial/header') %>
+      <div>
 
-    <%- body %>
+        <div class="grid-item grid-item--width4">
+          <div class="main-post">
+            <%- partial('_partial/post-generic-main') %>
+          </div>
+        </div>
+
+        <%- body %>
+        
+      </div>
+
 
     </div>
 
